<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="telaLoginVM" type="com.guilhermelimasapplication.app.modules.telalogin.data.viewmodel.TelaLoginVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearTelaLogin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyledeep_purple_A400">
        <ImageView android:id="@+id/image5c1dd20b6f5c9ae"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_181pxh"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="@dimen/_247pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_5c1dd20b6f5c9ae}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_5c1dd20b6f5c9ae"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtMYHERO"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{telaLoginVM.telaLoginModel.txtMYHERO}"
            style="@style/txtAlfaSlabOneregular50" tools:text="@string/lbl_my_hero"/>
        <TextView android:ellipsize="end" android:id="@+id/txtAcademia"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{telaLoginVM.telaLoginModel.txtAcademia}"
            style="@style/txtJuliusSansOneregular20" tools:text="@string/lbl_academia"/>
        <EditText
            android:background="@drawable/rectangle_border_white_a700_radius_8"
            android:ellipsize="end"
            android:hint="@string/lbl_digite_o_login"
            android:id="@+id/etInputLogin" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_32pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_17pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@={telaLoginVM.telaLoginModel.etInputLoginValue}"
            android:textColorHint="@color/white_A700_7f"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_border_white_a700_radius_8"
            android:ellipsize="end"
            android:hint="@string/lbl_digite_a_senha"
            android:id="@+id/etInputSenha" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_17pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@={telaLoginVM.telaLoginModel.etInputSenhaValue}"
            android:textColorHint="@color/white_A700_7f"
            style="@style/etRoundedOutline" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtEsqueceuasenh"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{telaLoginVM.telaLoginModel.txtEsqueceuasenh}"
            style="@style/txtOutfitregular13" tools:text="@string/msg_esqueceu_a_senh"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearBtnLogin"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnLogin"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_12pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_12pxv"
                android:singleLine="true"
                android:text="@string/lbl_login"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_login"/>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtCriarconta"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_105pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{telaLoginVM.telaLoginModel.txtCriarconta}"
            style="@style/txtPoppinsregular13" tools:text="@string/msg_n_o_tem_cadastr"/>
    </LinearLayout>
</layout>
