<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="homeVM" type="com.guilhermelimasapplication.app.modules.home.data.viewmodel.HomeVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearHome"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyledeep_purple_A400">
        <TextView android:id="@+id/txtLanguage"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="wrap_content"
            android:text="@{homeVM.homeModel.txtLanguage}"
            style="@style/txtRubikMonoOneregular30" tools:text="@string/msg_fichas_de_tre"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnlanguageOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_32pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyledeep_orange_A400cornerRadius">
            <ImageView android:id="@+id/imageImageOne"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_88pxh"
                android:layout_marginEnd="@dimen/_94pxh"
                android:layout_marginStart="@dimen/_95pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="@dimen/_137pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_image1}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_image1"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguageOne"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_13pxv"
                android:layout_marginEnd="@dimen/_95pxh"
                android:layout_marginStart="@dimen/_95pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{homeVM.homeModel.txtLanguageOne}"
                style="@style/txtRubikMonoOneregular25" tools:text="@string/lbl_kratos"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnnaruto1381"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStyledeep_orange_A400cornerRadius">
            <ImageView android:id="@+id/imageNaruto1381"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_82pxh"
                android:layout_marginEnd="@dimen/_61pxh"
                android:layout_marginStart="@dimen/_61pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="@dimen/_192pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_naruto1381}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_naruto1381"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtNaruto"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_13pxv"
                android:layout_marginEnd="@dimen/_61pxh"
                android:layout_marginStart="@dimen/_61pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{homeVM.homeModel.txtNaruto}"
                style="@style/txtRubikMonoOneregular25" tools:text="@string/lbl_naruto"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/frameStack"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_237pxv"
            android:layout_marginEnd="@dimen/_17pxh"
            android:layout_marginStart="@dimen/_17pxh"
           android:orientation="vertical"
            android:layout_marginTop="@dimen/_10pxv" android:layout_width="@dimen/_326pxh">
            <FrameLayout android:id="@+id/frameStackgoku"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_163pxv"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_width="@dimen/_326pxh" style="@style/groupStyledeep_orange_A400cornerRadius">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGoku"
                    android:layout_gravity="bottom|start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginEnd="@dimen/_109pxh"
                    android:layout_marginStart="@dimen/_109pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{homeVM.homeModel.txtGoku}"
                    style="@style/txtRubikMonoOneregular25" tools:text="@string/lbl_goku"/>
                <ImageView android:id="@+id/imageKlipartzOne"
                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_125pxh"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_89pxh"
                    android:layout_marginStart="@dimen/_89pxh"
                    android:layout_width="@dimen/_125pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_klipartz1}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_klipartz1"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/frameStack626383224ec0athirtythree"
                android:layout_gravity="bottom|start"
                android:layout_height="@dimen/_81pxv"
                android:layout_marginTop="@dimen/_10pxv" android:layout_width="@dimen/_326pxh">
                <FrameLayout android:id="@+id/frameStackfichaone"
                    android:layout_gravity="bottom|start"
                    android:layout_height="@dimen/_64pxv"
                    android:layout_marginTop="@dimen/_10pxv" android:layout_width="@dimen/_326pxh">
                    <View
                        android:background="@drawable/rectangle_bg_deep_orange_a400_radius_10"
                        android:id="@+id/viewFichaOne"
                        android:layout_gravity="bottom|center"
                        android:layout_height="@dimen/_163pxv" android:layout_width="@dimen/_341pxh"/>
                    <TextView android:ellipsize="end"
                        android:gravity="top|start"
                        android:id="@+id/txtTreinolivre"
                        android:layout_gravity="bottom|center"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_30pxh"
                        android:layout_marginStart="@dimen/_30pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:text="@{homeVM.homeModel.txtTreinolivre}"
                        style="@style/txtRubikMonoOneregular25" tools:text="@string/lbl_treino_livre"/>
                </FrameLayout>
                <ImageView
                    android:id="@+id/image626383224ec0aThirtyThree"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_81pxh"
                    android:layout_marginEnd="@dimen/_40pxh"
                    android:layout_marginStart="@dimen/_40pxh"
                    android:layout_width="@dimen/_148pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_626383224ec0a33}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_626383224ec0a33"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
